<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/counter_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@color/default_color"
        android:gravity="center"
        android:text="@string/text_textView_counter_0"
        android:textColor="@color/white"
        android:textSize="200sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_black_settings"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <Button
        android:id="@+id/btn_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_count" />

    <Button
        android:id="@+id/btn_black_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/text_btn_black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/btn_red_settings"
        app:layout_constraintStart_toStartOf="@+id/counter_view" />

    <Button
        android:id="@+id/btn_red_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/text_btn_red"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/btn_blue_settings"
        app:layout_constraintStart_toEndOf="@+id/btn_black_settings" />

    <Button
        android:id="@+id/btn_blue_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="@string/text_btn_blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/btn_green_settings"
        app:layout_constraintStart_toEndOf="@+id/btn_red_settings" />

    <Button
        android:id="@+id/btn_green_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/text_btn_green"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/counter_view"
        app:layout_constraintStart_toEndOf="@id/btn_blue_settings" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="60dp" />


</androidx.constraintlayout.widget.ConstraintLayout>